--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.6.3",
     "@nuxt/image": "1.11.0",
     "@nuxt/scripts": "0.11.10",
     "@nuxt/ui": "3.3.0",
     "@unhead/vue": "^2.0.3",
+    "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.1",
     "typescript": "^5.6.3",
     "vue": "^3.5.18",
